@@ -91,8 +91,10 @@ can skip ahead to the CMake section.
        pcre2_compile.c
        pcre2_config.c
        pcre2_context.c
+       pcre2_convert.c 
        pcre2_dfa_match.c
        pcre2_error.c
+       pcre2_extuni.c 
        pcre2_find_bracket.c
        pcre2_jit_compile.c
        pcre2_maketables.c
@@ -377,4 +379,4 @@ and executable, is in EBCDIC and native z/OS file formats and this is the
 recommended download site.
 
 =============================
-Last Updated: 17 March 2017
+Last Updated: 12 September 2017
